2009-07-22
	Implemented "ELSE IF" syntax
	
2009-07-11
	fltk - file widget displays sorted items
	
2009-06-29
	update variables to use 64 bits
	fix for matrix inverse bug

2009-06-13
	updated form API in fltk version

2009-04-13
	incorporate agg into fltk version (reverted for now)

2009-01-14
	in osd_getpixel() for X11, offset x/y as getPixel is relative to the outer window
	FileWidget allow input of a custom path

2009-01-07
	Updated FileWidget to allow relative paths for saveas. Updated to handle
	readonly edit buffers. Fixed a few compiler warnings

2008-11-26
	FLTK 0.10.2 was released

2008-11-23
	FLTK: Fix for possible crash with html command used in plain window mode. Fix for
	file widget for directory names with space characters.

2008-11-16
	FLTK: Fix for invalid values returned by PEN command.

2008-10-26
	FLTK: Fixed a few problems with find and replace. Implemented Rename Word command.

2008-08-16
	* released windows version 0.10.1

2008-08-01
	* passing length < 0 to MID no longer causes stackdump

2008-07-17
	* refactor FLTK to allow opening of multiple editors

2008-07-05
	* cleanup ansi codes from output in dev_null driver. fixed logprint command
	* fixed "open for append"
	* added FLTK -n non-interactive flag (prevents the gui from being displayed)

2008-07-01
	* Implemented program restart option in FLTK

2008-06-28
	* Updated to build FLTK version using MingW under Cygwin (see below).

2008-06-26
	* Added build support for MingW under Cygwin. This is simpler than installing
	  Msys, simply install MingW to say c:\MinwG, then change your .bash_profile with:
	  export PATH=/c/MinGW/bin:$PATH
	  Then re-run configure (under cygwin bash) and a non-cygwin console version will
	  be produced which can run under cmd.exe, explorer.exe etc.

2008-06-20
	* Can now supply program arguments on FLTK version command line:
        sbasici -r t5.bas foo -or- sbasici t5.bas foo -or- ls | sbasic t5.bas --
	also: echo foo | sbasic foo.bas --

2008-06-06