@@ -1,3 +1,6 @@
+2009-07-26
+	Implemented editor font selection in FLTK build. Fixed memoryTest.bas sample
+	
 2009-07-22
 	Implemented "ELSE IF" syntax
 	
